testsuite/tests/rename/should_fail/T9815b.hs
{-# LANGUAGE RecordWildCards #-}
module T9815b where

import T9815

bar = print N{..}
